# j-pet-framework-examples

./: CMakeLists.txt
MCDataComparison_run4/: CMakeLists.txt  mainData.cpp  mainMC.cpp  runData.sh  runMC.sh
